--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: '3.4'
 services:
   backend:
     container_name: truss_backend
-    image: php:7.1-apache
     build:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - "./app:/var/www/"
+      - "./backend/app:/var/www/"
     ports:
       - "80:80"
     links:
@@ -20,7 +19,9 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "./data:/var/lib/mysql"
+      - "./mysql/data:/var/lib/mysql"
+    env_file:
+          - ".env"
   phpmyadmin:
     container_name: truss_phpmyadmin
     build:
@@ -28,6 +29,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:80"
+    links:
+      - "mysql:mysql"
+    env_file:
+          - ".env"
   git:
     container_name: truss_git
     build:
@@ -35,3 +40,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "22:22"
+    volumes:
+      - "./git/keys:/git-server/keys"
+      - "./git/repos:/git-server/repos"
