--- a/backend/config/symfony.conf
+++ b/backend/config/symfony.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
     ServerName localhost
-    DocumentRoot /var/www/public/
+    DocumentRoot /var/www/symfony/public/
     DirectoryIndex index.php
-    <Directory /var/www/public/>
+    <Directory /var/www/symfony/public/>
         Options -Indexes
         AllowOverride All
         Require all granted
