Added composer deps to resolve symfony4.0 .htaccess issue(s) for web profiler for dev env

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 # https://goo.gl/jx1BQa
 RUN apt-get update
-RUN apt-get install -y openssh-server git
+RUN apt-get install -y openssh-server git zip unzip
 
 RUN ssh-keygen -A
 
