--- a/.env.dist
+++ b/.env.dist
@@ -1,10 +1,10 @@
 PMA_ARBITRARY=0
 PMA_HOST=mysql
 PMA_PORT=3306
-PMA_USER=root
-PMA_PASSWORD=lL(sV5iU2}ERf.G??[Y&S~?$X1P4X&
+PMA_USER=pleb
+PMA_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
 
-MYSQL_ROOT_PASSWORD=lL(sV5iU2}ERf.G??[Y&S~?$X1P4X&
+MYSQL_ROOT_PASSWORD=8MpDHNf9ZyyMtqUynMKi4ojntAIsZLJt
 MYSQL_DATABASE=symfony
 MYSQL_USER=pleb
-MYSQL_PASSWORD=a!NSjIeYq1S9<F<>s#f<{I>]1"El3h
+MYSQL_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
