--- a/backend/app/.env.dist
+++ b/backend/app/.env.dist
@@ -4,7 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f1be732713715011f33d7eb5a2e48d68
+APP_SECRET=943a09df79b62e164ef22d8a99c65fec
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
@@ -20,5 +20,5 @@ MAILER_URL=null://localhost
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL='mysql://db_user:db_password@127.0.0.1:3306/db_name'
 ###< doctrine/doctrine-bundle ###
