updated with gitserver service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,10 @@ services:
       - 8080:80
     env_file:
       - ./.env
+  gitserver:
+    container_name: truss_gitserver
+    build:
+      context: ./gitserver
+      dockerfile: Dockerfile
+    ports:
+      - 22:22
