updated env to point to truss db, updated docker naming from apache back to backend, added git server functionality to backend container, added repo + review + sshkey + user entities and repos + added a simple testserver service for testing ssh git@backend operations (currently set to no-interactive-login) + added default help and list commands to git-shell-commands + now versioning .ssh directory + authorized key dist file + repo vol directory + sshd_config from previous implementation w/ removal of dep notices

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,9 @@ COPY ./config/symfony.conf /etc/apache2/sites-available/000-default.conf
 # Update base packages
 RUN apt-get update
 
+# Download ssh-server
+RUN apt-get install -y openssh-server
+
 # Download composer and required deps
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN apt-get install -y git
@@ -25,7 +28,21 @@ RUN apt-get install -y g++
 RUN docker-php-ext-configure intl
 RUN docker-php-ext-install intl
 
+# Git server steps
+RUN adduser --disabled-password --gecos "" git
+USER git
+RUN mkdir ~/.ssh
+RUN chmod 700 ~/.ssh
+RUN touch ~/.ssh/authorized_keys
+RUN chmod 600 ~/.ssh/authorized_keys
+RUN ssh-keygen -A
+USER root
+RUN usermod -s $(which git-shell) git
+
 WORKDIR /var/www/symfony
 
-EXPOSE 80
-CMD a2enmod rewrite; apache2-foreground
+# sshd_config file is edited for enable access key and disable access password
+COPY ./config/sshd_config /etc/ssh/sshd_config
+
+EXPOSE 22 80
+CMD a2enmod rewrite; service ssh start; apache2-foreground
