--- a/symfony/.env.dist
+++ b/symfony/.env.dist
@@ -24,7 +24,7 @@ APP_SECRET=90add9db878b71f3fb7acd060fcb7487
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://pleb:7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B@mysql:3306/lens
+DATABASE_URL=mysql://pleb:7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B@mysql:3306/truss
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
