migrated to bitnami docker image for mysql as windows has permission problems with native maria/mysql images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql/data:/var/lib/mysql
+      - ./mysql/data:/bitnami/mariadb
     env_file:
       - ./.env
   phpmyadmin:
