--- a/.env.dist
+++ b/.env.dist
@@ -6,7 +6,7 @@ PMA_USER=pleb
 PMA_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
 
 # MySQL
-MYSQL_ROOT_PASSWORD=8MpDHNf9ZyyMtqUynMKi4ojntAIsZLJt
-MYSQL_DATABASE=truss
-MYSQL_USER=pleb
-MYSQL_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
+MARIADB_ROOT_PASSWORD=8MpDHNf9ZyyMtqUynMKi4ojntAIsZLJt
+MARIADB_DATABASE=truss
+MARIADB_USER=pleb
+MARIADB_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
