still can't seem to rely on the generator to get things right - updated generated code to allow relations to the same entity from the same parent entity

--- a/.env.dist
+++ b/.env.dist
@@ -2,11 +2,12 @@
 PMA_ARBITRARY=0
 PMA_HOST=mysql
 PMA_PORT=3306
-PMA_USER=pleb
-PMA_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
+PMA_USER=root
+PMA_PASSWORD=8MpDHNf9ZyyMtqUynMKi4ojntAIsZLJt
 
 # MySQL
+ALLOW_EMPTY_PASSWORD=no
 MARIADB_ROOT_PASSWORD=8MpDHNf9ZyyMtqUynMKi4ojntAIsZLJt
-MARIADB_DATABASE=truss
 MARIADB_USER=pleb
 MARIADB_PASSWORD=7kdJ8y7EPZ1pj0RunE0sw4B1JxgTic3B
+MARIADB_DATABASE=truss
